--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - .env.${ENVIRONMENT:-dev}
     environment:
       - DB_HOST=host.docker.internal
-      - DB_PARAM=${DB_PARAM}
+      - DB_PARAM=${DB_PARAM:-_test}
     volumes:
       - .:/app
       - ~/Desktop/stock_plots:/app/stock_plots
