--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
     environment:
       - DB_HOST=host.docker.internal
       - DB_PARAM
+      - DB_PASSWORD
+      # Default database connection details
+      - DB_USER=${DB_USER:-docker_app}
     volumes:
       - .:/app
       - ~/Desktop/stock_plots:/app/stock_plots
