--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,14 @@ services:
     env_file:
       - .env.${DB_PARAM:-test}
     environment:
-      - DB_HOST=host.docker.internal
+      DB_HOST: host.docker.internal
       # Required inputs
-      - DB_PARAM
-      - DB_USER
-      - DB_PASSWORD
+      DB_PARAM:
+      DB_USER:
+      DB_PASSWORD:
       # Automatically configured
-      - DB_NAME=am_db_${DB_PARAM}
-      - DB_SCHEMA=asset_management_${DB_PARAM}
+      DB_NAME: am_db_${DB_PARAM}
+      DB_SCHEMA: asset_management_${DB_PARAM}
     volumes:
       - .:/app
       - ~/Desktop/stock_plots:/app/stock_plots
