--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ pytest==7.4.4
 pytest-mock==3.12.0
 pytest-cov==4.1.0
 pyarrow==14.0.1
-psycopg2-binary==2.9.9
-python-dotenv==1.0.0
+psycopg==2.9.9
+python-dotenv==1.1.1
 odfpy==1.4.1
